<resources>
    <string name="app_name">Aurora</string>
    <string name="development_studio">by some development studio</string>
    <string name="common_help">Help</string>
    <string name="common_settings">Settings</string>
    <string name="common_rate">Rate</string>
    <string name="common_share">Share</string>
    <string name="common_imprint">Imprint</string>
    <string name="common_ms">ms</string>
    <string name="common_as">as</string>
    <string name="common_hello_world">Hello World</string>
    <string name="common_app">App</string>
    <string name="common_close">Close</string>
    <string name="common_progress">Progress</string>
    <string name="common_bold_measure">MEASURE</string>
    <string name="common_bold_overview">OVERVIEW</string>
    <string name="common_export">Export</string>
    <string name="common_import">Import</string>
    <string name="common_cancel">Cancel</string>
    <string name="progress_complete">Complete</string>
    <string name="progress_error">Error</string>
    <string name="progress_start">Start</string>
    <string name="sentence_how_do_you_feel">How Do You Feel?</string>
    <string name="sentence_this_is_a_description">This is a description.</string>
    <string name="sentence_export_db">Exports the Database into the "data/database" Folder.</string>
    <string name="sentence_import_db">Import Database from \"files/export.sql\"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="main_drawer_website">Website</string>
    <string name="main_drawer_feedback">Feedback</string>
    <string name="main_drawer_privacy_policy">Privacy Policy</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_measure">Measurement</string>
    <string name="title_activity_save_values">Measurement Details</string>
    <string name="title_activity_start_measuring">Press To Start Measurement</string>
    <string name="title_activity_value_description">ValueDescriptionActivity</string>
    <string name="title_activity_statistic">Measure History</string>
    <string name="title_activity_hrv_value">Measure Details</string>
    <string name="settings_login_credentials">Login credentials</string>
    <string name="settings_your_name_text">Your Name</string>
    <string name="settings_your_name_summary">Please provide your username</string>
    <string name="settings_application_updates">Application Updates</string>
    <string name="settings_application_updates_summary">This option if selected will allow the application to check for latest versions.</string>
    <string name="settings_database">Database</string>
    <string name="settings_database_summary">Import or Export or Delete Your Data.</string>
    <string name="settings_delete_db">Delete Data</string>
    <string name="settings_delete_db_summary">Deletes all previously recorded data.</string>
    <string name="measure_category_general">General</string>
    <string name="measure_category_relaxed">Relaxed</string>
    <string name="measure_category_work">Work</string>
    <string name="measure_category_stressed">Stressed</string>
    <string name="measure_category_sport">Sport</string>
    <string name="measure_fragment_min">min:</string>
    <string name="measure_fragment_rr_min">10</string>
    <string name="measure_fragment_time_unit"> ms</string>
    <string name="measure_fragment_max">max:</string>
    <string name="measure_fragment_rr_max">10</string>
    <string name="measure_fragment_avg">average:</string>
    <string name="measure_fragment_rr_avg">10</string>
    <string name="measure_fragment_count">count:</string>
    <string name="measure_fragment_rr_count">10</string>
    <string name="measure_fragment_press_to_start">Press To Start Measurement</string>
    <string name="measure_details_measure_category">Measurement Category</string>
    <string name="measure_detail_add_comment_msg">Add a Comment to Your Measurement</string>
    <string name="measure_content_rr_status_standard">0,00</string>
    <string name="measure_content_rr">RR</string>
    <string name="measure_content_time_unit">sec</string>
    <string name="measure_list_item_std_hrv">12,13</string>
    <string name="measure_list_item_unit">ms</string>
    <string name="stat_val_item_std_time">14:00 PM</string>
    <string name="stat_val_item_std_category">General</string>
    <string name="stat_val_item_std_stats_value">12,13</string>
    <string name="overview_list_item_as">as</string>
    <string name="hrv_value_rr_intervals">RR-Intervals</string>
    <string name="hrv_value_hrv_values">HRV Values</string>
    <string name="hrv_value_details">Details</string>
    <string name="hrv_value_standard_date">28 August 2015</string>
    <string name="hrv_value_standard_rating">3.5 / 5</string>
    <string name="hrv_value_standard_category">General</string>
    <string name="hrv_value_comment">That was a great measurement</string>
    <string name="spinner_cat_item_more_values">More Values</string>
    <string name="overview_add_items_footer_more_vals">More Values</string>
    <string name="content_save_measurement_category">Measurement Category</string>
    <string name="content_save_add_comment_msg">Add a Comment to Your Measurement</string>
    <string name="share_subject">New Universal Health App</string>
    <string name="share_body">Hey checkout this new App aurora it is really cool!!</string>
    <string name="share_via">Share via</string>
    <string name="feedback_send">Send</string>
    <string name="feedback_cancel">Cancel</string>
    <string name="feedback_itsa">It is a:</string>
    <string name="feedback_textview">Love it? Hate it? Would you like to suggest a new feature or report a big? We would love to hear from you!</string>
    <string name="feedback_category_bug">Bug</string>
    <string name="feedback_category_idea">Idea</string>
    <string name="feedback_category_question">Question</string>
    <string name="feedback_your_comment">Your Comment</string>
    <string name="how_measure_q">How to measure HRV Values?</string>
    <string name="how_measure_a">Put on your MS Band 2 and start the measurement by pressing the measure button in the main activity. Stay still during the measurement.</string>
    <string name="what_hrv_q">What is HRV?</string>
    <string name="what_hrv_a">Heart rate variability (HRV) is the physiological phenomenon of variation in the time interval between heartbeats. It is measured by the variation in the beat-to-beat interval.</string>
    <string name="what_meaning_q">What is the meaning of this app?</string>
    <string name="what_meaning_a">This app does a HRV analysis by using time-domain or frequency-domain methods.</string>
    <string name="how_save_q">How to save my measurement?</string>
    <string name="how_save_a">After the progress circle fills you get the chance to add more information to your measurement. By clicking the save button the measurement is saved.</string>
    <string name="how_previous_q">Can I see my previous measurements?</string>
    <string name="how_previous_a">By selecting the overview tab you can view your previous measurements.</string>
    <string name="icon">Icon made by <a href="http://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank" title="Creative Commons BY 3.0">CC 3.0 BY</a></string>
    <string name="developers">Developers</string>
    <string name="developer_thomas">Thomas github.com/thomcz</string>
    <string name="developer_julian">Julian github.com/Fenox</string>
    <string name="developer_matthaeus">Matthäus github.com/Thaeus</string>
</resources>