<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:summary="@string/settings_login_credentials"
        android:title="@string/settings_login_credentials" >

        <EditTextPreference android:title="@string/settings_your_name_text"
            android:key="username"
            android:summary="@string/settings_your_name_summary"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/common_app"
        android:summary="App Settings">

        <CheckBoxPreference android:title="@string/settings_application_updates"
            android:defaultValue="false"
            android:summary="@string/settings_application_updates_summary"
            android:key="applicationUpdates" />
    </PreferenceCategory>


    <PreferenceCategory
        android:summary="@string/settings_database_summary"
        android:title="@string/settings_database" >
        <ListPreference
            android:title="Download Details"
            android:summary="Select the kind of data that you would like to download"
            android:key="downloadType"
            android:defaultValue="1"
            android:entries="@array/listArray"
            android:entryValues="@array/listValues" />
    </PreferenceCategory>
</PreferenceScreen>