<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group
        android:checkableBehavior="single"
        android:id="@+id/menu_group_settings">
        <item
            android:id="@+id/menu_help"
            android:icon="@drawable/ic_help"
            android:title="@string/common_help"/>
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/common_settings" />
    </group>

    <group
        android:checkableBehavior="single"
        android:id="@+id/menu_group_share">
        <item
            android:id="@+id/menu_rate"
            android:icon="@drawable/ic_rate"
            android:title="@string/common_rate" />
        <item
            android:id="@+id/menu_share"
            android:icon="@drawable/ic_share"
            android:title="@string/common_share" />
    </group>

    <group
        android:checkableBehavior="single"
        android:id="@+id/menu_group_imprint">
        <item
            android:id="@+id/menu_website"
            android:icon="@drawable/ic_website"
            android:title="@string/main_drawer_website" />
        <item
            android:id="@+id/menu_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/main_drawer_feedback" />
        <item
            android:id="@+id/menu_privacy"
            android:icon="@drawable/ic_privacy"
            android:title="@string/main_drawer_privacy_policy" />
        <item
            android:id="@+id/menu_imprint"
            android:icon="@drawable/ic_imprint"
            android:title="@string/common_imprint" />
    </group>

    <!--
    <item android:title="Debug">
        <menu>
            <item
                android:id="@+id/sample_data"
                android:icon="@drawable/ic_heart"
                android:title="Create Sample Data" />
            <item
                android:id="@+id/test_function"
                android:icon="@drawable/ic_heart"
                android:title="Execute Test Function" />
        </menu>
    </item>
    -->

</menu>
