<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:minHeight="?android:attr/listPreferredItemHeight">
    <TextView
        android:id="@+id/measure_value_desc"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:text="@string/measure_category_general"
        android:padding="6dip"
        android:textSize="18sp"
        android:layout_weight="1"
        android:textColor="@color/colorAccent"/>
    <TextView
        android:id="@+id/hrv_value"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:text="@string/measure_list_item_std_hrv"
        android:textSize="18sp"
        android:padding="6dip"/>
    <TextView
        android:id="@+id/measure_value_unit"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:text="@string/measure_list_item_unit"
        android:textSize="18sp"
        android:padding="6dip"/>

</LinearLayout>