<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sentence_how_do_you_feel"
            android:textSize="18sp"
            android:textColor="@color/colorAccent"/>
        <RatingBar
            android:id="@+id/measure_rating"
            android:theme="@style/RatingBar"
            android:rating="3.5"
            android:stepSize="0.5"
            android:numStars="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/measure_details_measure_category"
            android:textSize="18sp"
            android:textColor="@color/colorAccent"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/measure_categories"
            />
        <EditText
            android:id="@+id/measure_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/measure_detail_add_comment_msg"/>
</LinearLayout>