<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin">
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:minHeight="?android:attr/listPreferredItemHeight">
    <ImageView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_calender"
      android:tint="@color/colorAccent"
      android:paddingEnd="10dp"
      android:paddingStart="10dp"
      android:layout_weight="3"/>
    <TextView
      android:id="@+id/hrv_date"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center_vertical"
      android:textSize="18sp"
      android:text="@string/hrv_value_standard_date"
      android:layout_weight="1"/>
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:minHeight="?android:attr/listPreferredItemHeight">
    <ImageView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_rate"
      android:tint="@color/colorAccent"
      android:paddingEnd="10dp"
      android:paddingStart="10dp"
      android:layout_weight="3"/>
    <TextView
      android:id="@+id/hrv_rating"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center_vertical"
      android:textSize="18sp"
      android:text="@string/hrv_value_standard_rating"
      android:layout_weight="1"/>
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:minHeight="?android:attr/listPreferredItemHeight">
    <ImageView
      android:id="@+id/hrv_category_icon"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_rate"
      android:tint="@color/colorAccent"
      android:paddingEnd="10dp"
      android:paddingStart="10dp"
      android:layout_weight="3"/>
    <TextView
      android:id="@+id/hrv_category"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center_vertical"
      android:textSize="18sp"
      android:text="@string/hrv_value_standard_category"
      android:layout_weight="1"/>
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:minHeight="?android:attr/listPreferredItemHeight">
    <ImageView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_comment"
      android:tint="@color/colorAccent"
      android:paddingEnd="10dp"
      android:paddingStart="10dp"
      android:layout_weight="3"/>
    <TextView
      android:id="@+id/hrv_comment"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center_vertical"
      android:textSize="18sp"
      android:text="@string/hrv_value_comment"
      android:layout_weight="1"/>
  </LinearLayout>
</LinearLayout>